--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lib/**/*.*"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": "rm -rf ./lib && tsc",
     "prepublish": "npm run build",
     "semantic-release": "semantic-release",
     "lint": "prettier --check \"*.{js,json,md}\"",
