--- a/package.json
+++ b/package.json
@@ -35,8 +35,13 @@
     "@types/react": "18.2.45",
     "prettier": "3.1.1",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "semantic-release": "22.0.12",
     "semantic-release-telegram-bot": "2.0.1",
     "typescript": "5.3.3"
+  },
+  "peerDependencies": {
+    "react": ">=18.2.0",
+    "react-dom": ">=18.2.0"
   }
 }
