--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "build": "rm -rf ./lib && tsc",
     "prepublish": "npm run build",
     "semantic-release": "semantic-release",
-    "lint": "prettier --check \"*.{js,json,md}\"",
-    "lint:fix": "prettier --write \"*.{js,json,md}\""
+    "lint": "eslint . --ext ts,tsx",
+    "format": "prettier --write \"**/*.ts*\""
   },
   "repository": {
     "type": "git",
@@ -30,10 +30,12 @@
     "@semantic-release/git": "10.0.1",
     "@semantic-release/github": "9.2.5",
     "@semantic-release/npm": "11.0.2",
+    "@sergeyzwezdin/eslint-config": "2.2.1",
+    "@sergeyzwezdin/prettier-config": "1.1.1",
     "@sergeyzwezdin/semantic-release-commits-config": "1.0.2",
     "@trivago/prettier-plugin-sort-imports": "4.3.0",
     "@types/react": "18.2.45",
-    "prettier": "3.1.1",
+    "eslint": "8.56.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "semantic-release": "22.0.12",
@@ -43,5 +45,10 @@
   "peerDependencies": {
     "react": ">=18.2.0",
     "react-dom": ">=18.2.0"
+  },
+  "prettier": "@sergeyzwezdin/prettier-config",
+  "eslintConfig": {
+    "extends": "@sergeyzwezdin/eslint-config/node",
+    "ignorePatterns": ["lib"]
   }
 }
