--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.5",
   "description": "Utility package to handle modals in React",
   "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "files": [
     "lib/**/*.*"
   ],
   "scripts": {
-    "build": "rm -rf ./lib && tsc",
+    "build": "rollup -c",
     "prepublish": "npm run build",
     "semantic-release": "semantic-release",
     "lint": "eslint . --ext ts,tsx",
@@ -27,6 +28,10 @@
   },
   "homepage": "https://github.com/sergeyzwezdin/react-modals#readme",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "25.0.7",
+    "@rollup/plugin-node-resolve": "15.2.3",
+    "@rollup/plugin-terser": "0.4.4",
+    "@rollup/plugin-typescript": "11.1.6",
     "@semantic-release/git": "10.0.1",
     "@semantic-release/github": "9.2.5",
     "@semantic-release/npm": "11.0.2",
@@ -38,8 +43,13 @@
     "eslint": "8.56.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rollup": "4.9.5",
+    "rollup-plugin-delete": "2.0.0",
+    "rollup-plugin-dts": "6.1.0",
+    "rollup-plugin-peer-deps-external": "2.2.4",
     "semantic-release": "22.0.12",
     "semantic-release-telegram-bot": "2.0.1",
+    "tslib": "2.6.2",
     "typescript": "5.3.3"
   },
   "peerDependencies": {
