--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sergeyzwezdin/react-modals",
+  "name": "@relab/react-modals",
   "version": "1.1.4",
   "description": "Utility package to handle modals in React",
   "main": "lib/index.js",
@@ -16,7 +16,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sergeyzwezdin/react-modals.git"
+    "url": "git+https://github.com/relab-services/react-modals.git"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "keywords": [
     "react"
@@ -24,10 +27,13 @@
   "author": "Sergey Zwezdin <sergey@zwezdin.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/sergeyzwezdin/react-modals/issues"
+    "url": "https://github.com/relab-services/react-modals/issues"
   },
-  "homepage": "https://github.com/sergeyzwezdin/react-modals#readme",
+  "homepage": "https://github.com/relab-services/react-modals#readme",
   "devDependencies": {
+    "@relab/eslint-config": "2.2.3",
+    "@relab/prettier-config": "1.1.3",
+    "@relab/semantic-release-commits-config": "1.0.8",
     "@rollup/plugin-commonjs": "25.0.7",
     "@rollup/plugin-node-resolve": "15.2.3",
     "@rollup/plugin-terser": "0.4.4",
@@ -35,9 +41,6 @@
     "@semantic-release/git": "10.0.1",
     "@semantic-release/github": "9.2.5",
     "@semantic-release/npm": "11.0.2",
-    "@sergeyzwezdin/eslint-config": "2.2.1",
-    "@sergeyzwezdin/prettier-config": "1.1.1",
-    "@sergeyzwezdin/semantic-release-commits-config": "1.0.2",
     "@types/react": "18.2.45",
     "eslint": "8.56.0",
     "react": "18.2.0",
@@ -56,9 +59,9 @@
     "react": ">=18.2.0",
     "react-dom": ">=18.2.0"
   },
-  "prettier": "@sergeyzwezdin/prettier-config",
+  "prettier": "@relab/prettier-config",
   "eslintConfig": {
-    "extends": "@sergeyzwezdin/eslint-config/node",
+    "extends": "@relab/eslint-config/node",
     "ignorePatterns": [
       "lib"
     ]
