fix: Provenance enabled

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "url": "git+https://github.com/relab-services/react-modals.git"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "provenance": true
   },
   "keywords": [
     "react"
